--- a/Diplom/Client/wwwroot/index.html
+++ b/Diplom/Client/wwwroot/index.html
@@ -7,10 +7,12 @@
     <title>Diplom</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+
     <link href="css/app.css" rel="stylesheet" />
     <link href="Diplom.Client.styles.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
 </head>
 
 <body>
